# IBM_AI_dataAnalysis_handson

./: .gitignore  FTM_hospital_EHR_projectCharter2025.tex  LICENSE  README.md  car_sales.jpynb  car_sales.qmd  main.py  pyproject.toml
